--- a/readme.rmd
+++ b/readme.rmd
@@ -1,1 +1,19 @@
-This is a readme file
+![](dirpolis_logo_eng.png)
+
+# Introduction to R
+Thsi is the GitHub repository for the Intro to R class (AY 24/25) at SNS. On this site, you will find code, data, and other material we will use in class.
+## Syllabus
+- [Syllabus](Syllabus.pdf)
+## Data and codebook
+In the first part of the class, we will work with data on Tunisia. Below are the codebook and the data of a survey we fielded there in 2014 as well as data files containing the resulst of the 2014 and 2019 legislative elections in Tunisia. 
+- [Codebook Tunisia Survey](Codebook-TUN-Survey.pdf)
+- [Data Tunisia Survey](tunisia_survey.csv)
+- [2014 Electoral Results](res2014.csv)
+- [2019 Electoral Results](res2019.csv)
+## Slides and code files
+### Session 1
+- [Slides session 1](Session-1.pdf)
+- [Code session 1](#)
+### Session 2
+- [Slides session 2](Session-2.pdf)
+- [Electoral results from Wikipedia](Scrape-Wikipedia.R)
