--- a/references.bib
+++ b/references.bib
@@ -20,3 +20,18 @@
   publisher = {PublicAffairs},
   address   = {New York}
 }
+
+@article{debruin2017,
+  title = {Preventing Coups d’état: How Counterbalancing Works},
+  volume = {62},
+  ISSN = {1552-8766},
+  url = {http://dx.doi.org/10.1177/0022002717692652},
+  DOI = {10.1177/0022002717692652},
+  number = {7},
+  journal = {Journal of Conflict Resolution},
+  publisher = {SAGE Publications},
+  author = {De Bruin,  Erica},
+  year = {2017},
+  month = mar,
+  pages = {1433–1458}
+}
