--- a/LDA.tex
+++ b/LDA.tex
@@ -2,6 +2,7 @@
 \usepackage{tikz}
 \usetikzlibrary{positioning, arrows.meta} 
 
+\begin{document}
 \begin{center}
 \begin{tikzpicture}[
   node distance=1.2cm and 1.6cm,
